2008-05-13 Sarka Todorova <sarka.todorova@cern.ch>
	* MTGB: remove garbage, update gluing
	* tagged as MuonTrackingGeometry-00-03-09 

2008-05-12 Sarka Todorova <sarka.todorova@cern.ch>
	* realistic and blended inert material coded in parallel
	* tagged as MuonTrackingGeometry-00-03-08 

2008-05-11 Sarka Todorova <sarka.todorova@cern.ch>
	* update (part of memory leak fix)
	* tagged as MuonTrackingGeometry-00-03-07 

2008-04-29 Sarka Todorova <sarka.todorova@cern.ch>
	* limit vector size for push_back
	* tagged as MuonTrackingGeometry-00-03-06 

2008-04-23 Sarka Todorova <sarka.todorova@cern.ch>
	* 3d frame adjusted to better confine shields
	* tagged as MuonTrackingGeometry-00-03-05 

2008-04-21 Sarka Todorova <sarka.todorova@cern.ch>
	* fix invalid read in simplified inert material
	* tagged as MuonTrackingGeometry-00-03-04

2008-04-18 Sarka Todorova <sarka.todorova@cern.ch>
	* merge with MTG-00-02-06-01 to prevent problems with active material
	* tagged as MuonTrackingGeometry-00-03-03

2008-04-18 Sarka Todorova <sarka.todorova@cern.ch>
	* implement diluted inert material (hardcoded)
	* tagged as MuonTrackingGeometry-00-03-02

2008-04-18 Sarka Todorova <sarka.todorova@cern.ch>
	* fix MSTB (Rpc shared bounds)
	* tagged as MuonTrackingGeometry-00-03-01

2008-04-16 Andreas.Salzburger@cern.ch < Andreas.Salzburger@cern.ch >
	* change of the way how SharedObject is handled
	* tagged as MuonTrackingGeometry-00-03-00

2008-04-04 Sarka Todorova <sarka.todorova@cern.ch>
	* merge with 'shared object' branch(-00-02-03-02) + updates
	* tagged as MuonTrackingGeometry-00-02-05

2008-04-03 Sarka Todorova <sarka.todorova@cern.ch>
	* protection against envelope/components input size mismatch in MSTB
	* tagged as MuonTrackingGeometry-00-02-04

2008-03-11 Sarka Todorova <sarka.todorova@cern.ch>
	* identical HepTransform replaced with 0 pointer in MIMB
	* tagged as MuonTrackingGeometry-00-02-03

2008-03-11 Sarka Todorova <sarka.todorova@cern.ch>