@@ -1,3 +1,7 @@
+2008-05-14 Sarka Todorova <sarka.todorova@cern.ch>
+	* MIMB: fix memory leak from rails
+	* tagged as MuonTrackingGeometry-00-03-10 
+
 2008-05-13 Sarka Todorova <sarka.todorova@cern.ch>
 	* MTGB: remove garbage, update gluing
 	* tagged as MuonTrackingGeometry-00-03-09 
